# rss_qualiopi

./: pyproject.toml  rss.xml
.github/workflows/: generate-rss.yml  rss-generateur.yml
docs/: aggregate.py  dashboard.html  index.html  sources.py
docs/admin/: sources.html
docs/assets/: app.js  style.css
docs/assets/css/: admin.css  components.css  legal.css
docs/assets/js/: activity-chart.js  admin-ui.js  feeds-local.js  main.js  sources-admin.js
docs/legal/: admin-legal.html  legal.html
docs/xml/: activity_history.jsonl  flux_metiers.xml  flux_pedago.xml  last_update.json  rss_centre-inffo_fr.xml  rss_digiforma_com.xml  rss_final.xml  rss_plongez_fr.xml  sources.json
rss/: sources.py
rss/assets/js/: activity-chart.js  feeds-external.js
src/rss_qualiopi/: rss_generator.py  scraper.py
