[project]
requires-python = ">=3.14"
readme = "README.md"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.14"
feedparser = "*"
requests = "*"
beautifulsoup4 = "*"
lxml = "*"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.2,<10.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
